[package]
name = "prpc-enum"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard-rpc = { version = "0.11.13", features = ["use-std", "test-utils"] }
postcard-schema = { version = "0.2.5", features = ["use-std", "derive"] }
serde = { version = "1.0.219", features = ["derive", "std"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "net"] }
